# psvmgd

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  meson.build  meson.options
.github/workflows/: main.yml
addon/psvmgd/: psvmgd.gdextension
addon/psvmgd/autoload/: showdown_service.gd  showdown_service.tscn
cmake/: ClangFormat.cmake
demo/: .gitignore  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
demo/addons/psvmgd/: plugin.cfg  psvmgd.gd
src/: BattleSimulator.cpp  BattleSimulator.h  CMakeLists.txt  GDExample.cpp  GDExample.h  GDExtensionTemplate.cpp  GDExtensionTemplate.h  RegisterExtension.cpp  ShowdownService.cpp  ShowdownService.h  Version.h.in
subprojects/: .gitignore  godot-cpp.wrap  psvm.wrap
subprojects/packagefiles/godot-cpp-4.2/: core_src_grabber.py  meson-bindings-generator.py  meson.build
templates/: template.debug.gdextension.in  template.gdextension.in
